# maddi

./: .bazelrc  .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  HOWTO.md  MODULE.bazel  NOTICE  PUBLISHING.md  README.md  TEST_MIGRATION.md  Taskfile.yml  analysis-rewiring.md  bazel-bin  bazel-maddi  bazel-out  bazel-testlogs  copyright_file.txt  discrepancies openjdk-maddi parsers.md  eclipse-plugin-state.md  formatter-analysis.md  formatter-doc-ir-plan.md  gradle.properties  guard-mode-analysis.md  ide-todo.md  java_library_conventions.bzl  modification-link-analyzer hardening.md  partial-reparse-rewire.md  platform.bzl  prep-analyzer hardening.md  release-cli.sh  rewiring.md  settings.gradle.kts
maddi-aapi-archive/: BUILD.bazel  build.gradle.kts  copyToJars.sh
maddi-aapi-archive/src/main/java/: module-info.java
maddi-aapi-parser/: AnnotationRules.adoc  BUILD.bazel  build.gradle.kts
maddi-aapi-parser/src/main/java/: module-info.java
maddi-cst-analysis/: BUILD.bazel  build.gradle.kts
maddi-cst-analysis/src/main/java/: module-info.java
maddi-cst-api/: BUILD.bazel  README.md  build.gradle.kts  kotlin-cst-assessment.md  kotlin-parser-plan.md  kotlin-stdlib-extension-facades.md
maddi-cst-api/src/main/java/: module-info.java
maddi-cst-impl/: BUILD.bazel  README.md  build.gradle.kts
maddi-cst-impl/src/main/java/: module-info.java
maddi-cst-io/: BUILD.bazel  build.gradle.kts
maddi-cst-io/notes/: decode-constructor-empty-sortedconstructors.md
maddi-cst-io/src/main/java/org/parsers/json/: InvalidToken.java  JSONLexer.java  JSONParser.java  Node.java  NonTerminalCall.java  ParseException.java  Token.java  TokenSource.java  package-info.java
maddi-cst-io/src/main/java/org/parsers/json/ast/: Array.java  BaseNode.java  BooleanLiteral.java  Delimiter.java  JSONObject.java  KeyValuePair.java  Literal.java  NullLiteral.java  NumberLiteral.java  Root.java  StringLiteral.java  Value.java  WHITESPACE.java  package-info.java
maddi-cst-print/: BUILD.bazel  build.gradle.kts
maddi-cst-print/src/main/java/: module-info.java
maddi-graph/: BUILD.bazel  build.gradle.kts
maddi-inspection-integration/: BUILD.bazel  build.gradle.kts
maddi-inspection-integration/src/test/resources/: e2immu.java_home_example.xml
maddi-inspection-parser/: BUILD.bazel  build.gradle.kts
maddi-inspection-resource/: BUILD.bazel  build.gradle.kts
maddi-java-bytecode/: BUILD.bazel  build.gradle.kts
maddi-java-bytecode/src/main/java/: module-info.java
maddi-java-bytecode/src/main/java/org/e2immu/bytecode/java/: ExpressionFactory.java  package-info.java
maddi-java-parser/: BUILD.bazel  build.gradle.kts
maddi-java-parser/src/main/java/: module-info.java
maddi-java-parser/src/main/java/org/e2immu/parser/java/: CommonParse.java  EnumSynthetics.java  ParseAnnotationExpression.java  ParseAnnotationMethodDeclaration.java  ParseBlock.java  ParseCompilationUnit.java  ParseConstructorCall.java  ParseExpression.java  ParseFieldDeclaration.java  ParseHelperImpl.java  ParseLambdaExpression.java  ParseLocalTypeDeclaration.java  ParseMethodCall.java  ParseMethodDeclaration.java  ParseMethodReference.java  ParseModuleInfo.java  ParseRecordPattern.java  ParseStatement.java  ParseType.java  ParseTypeDeclaration.java  Parsers.java  RecordSynthetics.java  ScanCompilationUnit.java  package-info.java
maddi-java-parser/src/main/java/org/parsers/java/: InvalidToken.java  JavaLexer.java  JavaParser.java  Node.java  NonTerminalCall.java  ParseException.java  Token.java  TokenSource.java  package-info.java
maddi-java-parser/src/main/java/org/parsers/java/ast/: AdditiveExpression.java  AllocationExpression.java  AndExpression.java  Annotation.java  AnnotationMethodDeclaration.java  AnnotationTypeBody.java  AnnotationTypeDeclaration.java  AnnotationTypeMemberDeclaration.java  ArrayAccess.java  ArrayDimsAndInits.java  ArrayInitializer.java  AssertStatement.java  AssignmentExpression.java  BaseNode.java  BasicForStatement.java  BooleanLiteral.java  BreakStatement.java  CTRL_Z.java  CasePattern.java  CastExpression.java  CatchBlock.java  CharacterLiteral.java  ClassDeclaration.java  CodeBlock.java  (+144 more)
maddi-modification-common/: BUILD.bazel  build.gradle.kts
maddi-modification-common/src/main/java/: module-info.java
maddi-modification-linkedvariables/: BUILD.bazel  build.gradle.kts
maddi-modification-linkedvariables/src/main/java/: module-info.java
maddi-modification-prepwork/: BUILD.bazel  build.gradle.kts  modificationAnalysis.adoc
maddi-modification-prepwork/notes/: getset-assertion-on-qualified-super.md
maddi-modification-prepwork/src/main/java/: module-info.java
maddi-run-config/: BUILD.bazel  build.gradle.kts
maddi-run-config/src/main/java/: module-info.java
maddi-run-main/: BUILD.bazel  build.gradle.kts
maddi-run-main/src/main/java/: module-info.java
maddi-run-openjdk/: BUILD.bazel  bazel_inputconfiguration.py  build.gradle.kts  running-examples.md
maddi-run-openjdk/src/main/java/: module-info.java
maddi-run-openjdk/src/test/resources/inputConfiguration/: fernflower.json  langchain4j.json  timefold-solver.json  timefold-solver2.json
maddi-support/: BUILD.bazel  build.gradle.kts
maddi-support/src/main/java/org/e2immu/annotatedapi/: AnnotatedAPI.java  package-info.java
maddi-support/src/main/java/org/e2immu/annotation/: Commutable.java  Container.java  Docstring.java  Docstrings.java  Final.java  FinalFields.java  Fluent.java  Identity.java  Immutable.java  ImmutableContainer.java  Independent.java  Modified.java  NotModified.java  NotNull.java  Nullable.java  package-info.java
maddi-support/src/main/java/org/e2immu/support/: AddOnceSet.java  Either.java  EventuallyFinal.java  EventuallyFinalOnDemand.java  FirstThen.java  FlipSwitch.java  Freezable.java  IEventuallyFinal.java  Lazy.java  SetOnce.java  SetOnceMap.java  VariableFirstThen.java  package-info.java
maddi-support/src/test/java/org/e2immu/support/: TestEither.java  TestEventuallyFinal.java  TestFirstThen.java  TestLazy.java  package-info.java
maddi-util/: BUILD.bazel  build.gradle.kts
(+2578 files in other folders)
