# maddi: a modification analyzer for duplication detection and immutability.
# Copyright 2020-2025, Bart Naudts, https://github.com/CodeLaser/maddi
#
# This program is free software: you can redistribute it and/or modify it under the
# terms of the GNU Lesser General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later version.
# This program is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for
# more details. You should have received a copy of the GNU Lesser General Public
# License along with this program.  If not, see <http://www.gnu.org/licenses/>.

# Root BUILD file

load("@rules_java//toolchains:default_java_toolchain.bzl", "default_java_toolchain")

# Export platform configuration
exports_files(["platform.bzl", "java_library_conventions.bzl"])

# JDK 26 compile toolchain over the locally-installed JDK (see .bazelrc / MODULE.bazel).
# rules_java ships no hermetic remotejdk_26 yet; swap java_runtime to remotejdk_26 once it does.
default_java_toolchain(
    name = "java26_toolchain",
    source_version = "26",
    target_version = "26",
    java_runtime = "@local_jdk//:jdk",
)

# Package group for internal visibility
package_group(
    name = "internal",
    packages = ["//..."],
)
