# Example subproject BUILD.bazel file
# Place this in each of your subproject directories (e.g., myproject/BUILD.bazel)

load("//:java_library_conventions.bzl", "codelaser_java_library")

codelaser_java_library(
    name = "maddi-aapi-archive",
    srcs = glob(["src/main/java/**/*.java"]),
     javacopts = [
                "-Xep:EqualsHashCode:WARN",
            ],
    visibility = ["//visibility:public"],  # or ["//visibility:private"] for internal-only
    resources = glob(["src/main/resources/**/*"]),
    deps = [
        "//maddi-support",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:ch_qos_logback_logback_classic",
    ],
)
