# Example subproject BUILD.bazel file
# Place this in each of your subproject directories (e.g., myproject/BUILD.bazel)

load("//:java_library_conventions.bzl", "codelaser_java_library", "codelaser_java_test")

# Main library target
codelaser_java_library(
    name = "maddi-cst-api",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
        # Add your specific dependencies here, e.g.:
        # "@maven//:org_jgrapht_jgrapht_core",
        "//maddi-support",
    ],
    visibility = ["//visibility:public"],  # or ["//visibility:private"] for internal-only
)
