# Example subproject BUILD.bazel file
# Place this in each of your subproject directories (e.g., myproject/BUILD.bazel)

load("//:java_library_conventions.bzl", "maddi_javalibrary", "maddi_javatest")

maddi_javalibrary(
    name = "maddi-cst-impl",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],  # or ["//visibility:private"] for internal-only
    #    resources = glob(["src/main/resources/**/*"]),
    deps = [
        # Add your specific dependencies here, e.g.:
        # "@maven//:org_jgrapht_jgrapht_core",
        # "//other-project:other-project",
        "//maddi-support",
        "//maddi-util",
        "//maddi-cst-api",
        "//maddi-cst-analysis",
    ],
)

maddi_javatest(
    name = "maddi-cst-impl_test",
    size = "small",  # or "medium", "large"
    srcs = glob(["src/test/java/**/*.java"]),
    test_packages = ["org.e2immu.language.cst.impl"],
    deps = [
        ":maddi-cst-impl",  # Depend on the main library
        "//maddi-cst-api",
        "//maddi-support",
        "//maddi-util",
    ],
)
