# Example subproject BUILD.bazel file
# Place this in each of your subproject directories (e.g., myproject/BUILD.bazel)

load("//:java_library_conventions.bzl", "codelaser_java_library", "codelaser_java_test")

# Main library target
codelaser_java_library(
    name = "maddi-graph",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],  # or ["//visibility:private"] for internal-only
    deps = [
        "@maven//:org_jheaps_jheaps",
        # Add your specific dependencies here, e.g.:
        # "@maven//:org_jgrapht_jgrapht_core",
        "//maddi-support",
        "@maven//:org_jgrapht_jgrapht_core",
        "@maven//:org_jgrapht_jgrapht_io",
    ],
)

codelaser_java_test(
    name = "maddi-graph_test",
    size = "small",  # or "medium", "large"
    srcs = glob(["src/test/java/**/*.java"]),
    test_packages = ["org.e2immu.util.internal.graph"],
    resources = glob(["src/test/resources/**"]),  # Add this too
    resource_strip_prefix = "maddi-graph/src/test/resources",  # Important!
    deps = [
        ":maddi-graph",  # Depend on the main library
        "//maddi-support",
    ],
)
