# maddi: a modification analyzer for duplication detection and immutability.
# Copyright 2020-2025, Bart Naudts, https://github.com/CodeLaser/maddi
#
# This program is free software: you can redistribute it and/or modify it under the
# terms of the GNU Lesser General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later version.
# This program is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for
# more details. You should have received a copy of the GNU Lesser General Public
# License along with this program.  If not, see <http://www.gnu.org/licenses/>.

load("//:java_library_conventions.bzl", "maddi_java_library", "maddi_java_test")

maddi_java_library(
    name = "maddi-inspection-integration",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],  # or ["//visibility:private"] for internal-only
    #    resources = glob(["src/main/resources/**/*"]),
    deps = [
        "//maddi-cst-api",
        # Add your specific dependencies here, e.g.:
        # "@maven//:org_jgrapht_jgrapht_core",
        # "//other-project:other-project",
        "//maddi-support",
        "//maddi-inspection-api",
        "//maddi-util",
        "//maddi-graph",
        "//maddi-cst-impl",
        "//maddi-cst-io",
        "//maddi-cst-analysis",
        "//maddi-cst-print",
        "//maddi-inspection-parser",
        "//maddi-inspection-resource",
        "//maddi-java-parser",
        "//maddi-java-bytecode",
    ],
)

maddi_java_test(
    name = "maddi-inspection-integration_test",
    size = "small",  # or "medium", "large"
    srcs = glob(["src/test/java/**/*.java"]),
    test_packages = ["org.e2immu.language.inspection.integration"],
    resources = glob(["src/test/resources/**"]),  # Add this too
    resource_strip_prefix = "maddi-inspection-integration/src/test/resources",  # Important!
    deps = [
        # the main library and its dependencies
        ":maddi-inspection-integration",
        "//maddi-cst-api",
        "//maddi-support",
        "//maddi-inspection-api",
        "//maddi-util",
        "//maddi-graph",
        "//maddi-cst-impl",
        "//maddi-cst-io",
        "//maddi-cst-analysis",
        "//maddi-cst-print",
        "//maddi-inspection-parser",
        "//maddi-inspection-resource",
        "//maddi-java-parser",
        "//maddi-java-bytecode",
        # libraries interpreted by the tests
        "@maven//:org_apiguardian_apiguardian_api",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_springframework_spring_test",
        "@maven//:org_springframework_spring_core",
        "@maven//:org_projectlombok_lombok",
    ],
)
