# Example subproject BUILD.bazel file
# Place this in each of your subproject directories (e.g., myproject/BUILD.bazel)

load("//:java_library_conventions.bzl", "maddi_javalibrary")

# Main library target
maddi_javalibrary(
    name = "maddi-inspection-parser",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
        # Add your specific dependencies here, e.g.:
        # "@maven//:org_jgrapht_jgrapht_core",
        "//maddi-inspection-api",
        "//maddi-cst-api",
        "//maddi-support",
        "//maddi-util",
        "//maddi-graph",
    ],
    visibility = ["//visibility:public"],  # or ["//visibility:private"] for internal-only
)
