# Example subproject BUILD.bazel file
# Place this in each of your subproject directories (e.g., myproject/BUILD.bazel)

load("//:java_library_conventions.bzl", "maddi_javalibrary", "maddi_javatest")

maddi_javalibrary(
    name = "maddi-inspection-resource",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],  # or ["//visibility:private"] for internal-only
    #    resources = glob(["src/main/resources/**/*"]),
    deps = [
        "//maddi-support",
        # Add your specific dependencies here, e.g.:
        # "@maven//:org_jgrapht_jgrapht_core",
        # "//other-project:other-project",
        "//maddi-util",
        "//maddi-cst-api",
        "//maddi-inspection-api",
    ],
)
