# maddi: a modification analyzer for duplication detection and immutability.
# Copyright 2020-2025, Bart Naudts, https://github.com/CodeLaser/maddi
#
# This program is free software: you can redistribute it and/or modify it under the
# terms of the GNU Lesser General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later version.
# This program is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for
# more details. You should have received a copy of the GNU Lesser General Public
# License along with this program.  If not, see <http://www.gnu.org/licenses/>.

load("//:java_library_conventions.bzl", "maddi_java_library", "maddi_java_test")
load("//:platform.bzl", "COMMON_JAVA_DEPS", "COMMON_JAVA_TEST_DEPS")

# Main library target
maddi_java_library(
    name = "maddi-java-parser",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = [
        "-Xep:EqualsHashCode:WARN",
        "-Xep:FormatString:WARN",
    ],
    visibility = ["//visibility:public"],  # or ["//visibility:private"] for internal-only
    #   resources = glob(["src/main/resources/**/*"]),
    deps = [
        # Add your specific dependencies here, e.g.:
        # "@maven//:org_jgrapht_jgrapht_core",
        # "//other-project:other-project",
        "@maven//:org_ow2_asm_asm",
        "//maddi-cst-api",
        "//maddi-inspection-api",
        "//maddi-inspection-parser",
        "//maddi-support",
        "//maddi-util",
    ],
)

# Test target
maddi_java_test(
    name = "maddi-java-parser_test",
    size = "small",  # or "medium", "large"
    srcs = glob(["src/test/java/**/*.java"]),
    test_packages = ["org.e2immu.parser.java"],
    #    resources = glob(["src/test/resources/**/*"]),
    deps = [
        ":maddi-java-parser",  # Depend on the main library
        "//maddi-cst-api",
        # Add additional test-specific dependencies here
        "//maddi-cst-impl",
        "//maddi-inspection-api",
        "//maddi-inspection-parser",
        "//maddi-inspection-resource",
        "//maddi-support",
    ],
)
