# Example subproject BUILD.bazel file
# Place this in each of your subproject directories (e.g., myproject/BUILD.bazel)

load("//:java_library_conventions.bzl", "maddi_javalibrary")

maddi_javalibrary(
    name = "maddi-modification-common",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],  # or ["//visibility:private"] for internal-only
    deps = [
        "//maddi-cst-analysis",
        "//maddi-cst-api",
        "//maddi-graph",
        "//maddi-inspection-api",
        "//maddi-support",
        "//maddi-util",
    ],
)
