# maddi: a modification analyzer for duplication detection and immutability.
# Copyright 2020-2025, Bart Naudts, https://github.com/CodeLaser/maddi
#
# This program is free software: you can redistribute it and/or modify it under the
# terms of the GNU Lesser General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later version.
# This program is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for
# more details. You should have received a copy of the GNU Lesser General Public
# License along with this program.  If not, see <http://www.gnu.org/licenses/>.

load("//:java_library_conventions.bzl", "maddi_java_library")

maddi_java_library(
    name = "maddi-modification-common",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],  # or ["//visibility:private"] for internal-only
    deps = [
        "//maddi-cst-analysis",
        "//maddi-cst-api",
        "//maddi-cst-print",
        "//maddi-graph",
        "//maddi-inspection-api",
        "//maddi-support",
        "//maddi-util",
    ],
)

# Shared test utilities (src/testFixtures, e.g. CommonTest.javaInspectorFactory), consumed by this
# module's own tests and by downstream test targets (e.g. //maddi-aapi-parser). The Gradle equivalent
# is the java-test-fixtures plugin's testFixtures source set.
maddi_java_library(
    name = "maddi-modification-common-testfixtures",
    srcs = glob(["src/testFixtures/java/**/*.java"]),
    testonly = True,
    visibility = ["//visibility:public"],
    deps = [
        "//maddi-cst-api",
        "//maddi-inspection-api",
        "//maddi-inspection-openjdk",
        "//maddi-inspection-resource",
        "//maddi-support",
        "@maven//:org_jspecify_jspecify",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_platform_junit_platform_commons",
        "@maven//:org_opentest4j_opentest4j",
    ],
)
